# mantaflow

./: .gitignore  .hgtags  CMakeLists.txt  Doxyfile.in  INSTALLING  README.md
dependencies/cnpy/: cnpy.cpp  example1.cpp
resources/: res.qrc
scenes/: _ML_reader.py  _ML_simulate.bat  _ML_sub.py  apic01_simple.py  benchmark_dam.py  benchmark_wave.py  benchmark_wave_measured.npz  filaments.py  fire.py  flip.py  flip01_simple.py  flip01_simplePdata.py  flip02_surface.py  flip02_surfacePdata.py  flip03_gen.py  flip04_adaptDt.py  flip05_narrow.py  flip05_narrow_bigbreakingdam.py  flip05_nbflip.py  flip05_secOrderBnd.py  flip06_obstacle.py  flip06_secOrderBnd.py  flip_levelset.py  flip_mark.py  flip_simple.py  freesurface.py  ghostfluid.py  guiding_2d.py  guiding_3d01_low.py  guiding_3d02_high.py  guiding_3d_high.py  idp_apic01_simple.py  idp_apic02_3d.py  karman.py  lidDrivenCavity.py  meshload.py  movingObstacle.py  nbflip_bigPaperSims.py  nbflip_smallPaperSims.py  nbflip_veldiff.py  (+23 more)
scenes/cell-growth/: export-particles.py  points.ipynb  view-particles.ipynb
scenes/cell-growth/results/: particles-frame-0.txt  particles-frame-1.txt  particles-frame-10.txt  particles-frame-2.txt  particles-frame-3.txt  particles-frame-4.txt  particles-frame-5.txt  particles-frame-6.txt  particles-frame-7.txt  particles-frame-8.txt  particles-frame-9.txt
source/: commonkernels.h  conjugategrad.cpp  conjugategrad.h  edgecollapse.cpp  edgecollapse.h  fastmarch.cpp  fastmarch.h  fileio.cpp  fileio.h  fileiovdb.cpp  flip.cpp  flip.h  fluidsolver.cpp  fluidsolver.h  general.cpp  general.h  grid.cpp  grid.h  grid4d.cpp  grid4d.h  kernel.cpp  kernel.h  levelset.cpp  levelset.h  mesh.cpp  mesh.h  movingobs.cpp  movingobs.h  multigrid.cpp  multigrid.h  noisefield.cpp  noisefield.h  particle.cpp  particle.h  shapes.cpp  shapes.h  test.cpp  timing.cpp  timing.h  turbulencepart.cpp  (+7 more)
source/cmake/: FindTBB.cmake
source/cuda/: buoyancy.cu  cudatools.h  curlnoise.cu  curlnoise.h  meshtools.cu  particle.cu  turbulence.cu
source/fileio/: fileio.cpp  io.h  iogrids.cpp  iomeshes.cpp  ioparticles.cpp  ioutil.cpp  iovdb.cpp  mantaio.cpp  mantaio.h
source/gui/: customctrl.cpp  customctrl.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  meshpainter.cpp  meshpainter.h  painter.cpp  painter.h  particlepainter.cpp  particlepainter.h  qtmain.cpp  qtmain.h
source/nopython/: general.cpp  general.h  manta.h  pclass.cpp  pclass.h
source/plugin/: advection.cpp  apic.cpp  extforces.cpp  fire.cpp  flip.cpp  fluidguiding.cpp  implicitdensityprojection.cpp  initplugins.cpp  kepsilon.cpp  meshplugins.cpp  numpyconvert.cpp  pressure.cpp  ptsplugins.cpp  secondaryparticles.cpp  sndparticles.cpp  surfaceturbulence.cpp  tfplugins.cpp  turbulence.cpp  vortexplugins.cpp  waveletturbulence.cpp  waves.cpp
source/preprocessor/: code.cpp  code.h  codegen_kernel.cpp  codegen_python.cpp  main.cpp  merge.cpp  parse.cpp  prep.h  replace.cpp  tokenize.cpp  tokenize.h  util.cpp  util.h
source/pwrapper/: manta.h  numpyWrap.cpp  numpyWrap.h  pclass.cpp  pclass.h  pconvert.cpp  pconvert.h  pvec3.cpp  pymain.cpp  pythonInclude.h  registry.cpp  registry.h
source/python/: defines.py
source/util/: grid4d.cpp  grid4d.h  integrator.h  interpol.h  interpolHigh.h  matrixbase.h  mcubes.h  quaternion.h  randomstream.h  rcmatrix.h  simpleimage.cpp  simpleimage.h  solvana.h  unistd.h  vector4d.cpp  vector4d.h  vectorbase.cpp  vectorbase.h
tensorflow/data/: readme.txt
tensorflow/example0_simple/: README.txt  tf_simple.py
tensorflow/example1_smoke_tiled/: README.txt  gen_many_doublesim_outputs.py  gen_many_doublesim_outputs.sh  manta_genSimData.py  manta_genSimData_pressure.py  manta_genSimData_ra.py  model.py  modelNp.py  modelUni.py  runTests.sh  runtestUni.sh  tf_genManySims.py  tf_model_np.py  tf_model_uni.py  tf_train.py  tf_train_keras.py  tf_train_pressure.py  tf_train_pressure_normalized.py  tilecreator.py
tensorflow/example2_liquid/: README.txt  manta_flip.py  manta_gendata.py  manta_mlflip.py  runTests.sh  tf_datasets.py  tf_network.py  tf_train.py  tf_uniio.py
tensorflow/example3_autoencoder/: README.txt  example_run_output.py  example_run_training.py  tf_flowAE.py
tensorflow/example3_resnet/: manta_genSimData2.py  tf_resnet.py
tensorflow/mantaGen/: README.md  create_dataset.py  display_dataset.py  scene_setup.py  test_exec.sh
tensorflow/mantaGen/datasets/: dummy.txt
tensorflow/mantaGen/scenes/: display_scene.py  flip_scene.py  functions.py  generate_obj_scene.py  scene.py  simple_scene.py  smoke_buoyant_scene.py  smoke_simple_scene.py  volumes.py
tensorflow/mantaGen/util/: arguments.py  git.py  io.py  io.py.bak01  logger.py  path.py  uniio.py
tensorflow/tools/: GAN.py  convautoenc.py  fluiddataloader.py  numpy2uni.py  paramhelpers.py  tilecreator.py  uni2numpy.py  uniio.py
tools/: getGitVersion.py  makeHgVersion.py
tools/maya/: Makefile  README.txt  bobjFluidObject.cpp  bobjloader.vcxproj  createDensityLoader.mel  densityloader.cpp  densityloader.vcxproj
tools/tests/: helperGeneric.py  helperGnuplot.sh  helperInclude.py  quickRunTfTests.py  reader.py  runTests.py  runTestsBase.py  test_0010_io.py  test_0011_inverted.py  test_0020_shapes.py  test_0030_gridop.py  test_0031_pdataop.py  test_0032_grid4dop.py  test_0040_interpol2d.py  test_0041_interpol3d.py  test_0042_interpol4d.py  test_0050_meshload.py  test_0100_psolve.py  test_0101_psolveYOpen.py  test_0102_psolvexXOpen.py  test_0110_mgsolve.py  test_0150_advect.py  test_0500_pdataop.py  test_1010_mix_obstacle.py  test_1010_plume2d.py  test_1011_plume2dYOpen.py  test_1012_plume2dxXOpen.py  test_1015_mix_obstacle.py  test_1020_uvs.py  test_1030_waveeq.py  test_1040_secOrderBnd.py  test_1050_guiding2d.py  test_1070_flip2d.py  test_1075_secorderBndFlip.py  test_2005_symmAdv.py  test_2010_plume3d.py  test_2011_plume3d_open.py  test_2020_obstacle.py  test_2025_turb.py  test_2045_fallingDrop.py  (+7 more)
